# everythingKB

./: .gitignore  Cargo.toml  README.md  config.example.toml
crates/everythingkb-cli/: Cargo.toml
crates/everythingkb-cli/src/: main.rs
crates/everythingkb-core/: Cargo.toml
crates/everythingkb-core/assets/: graph.html
crates/everythingkb-core/src/: classifier.rs  config.rs  exclusions.rs  ingest.rs  kb.rs  lib.rs  privacy.rs  registry.rs  scanner.rs  sessions.rs
crates/everythingkb-core/src/compile/: mod.rs  prompts.rs
crates/everythingkb-core/src/convert/: doc.rs  engine.rs  mod.rs  pdf.rs
crates/everythingkb-core/src/index/: mod.rs
crates/everythingkb-core/src/llm/: client.rs  mod.rs  ollama.rs  openai.rs
crates/everythingkb-core/src/metadata/: binary.rs  image.rs  mod.rs
crates/everythingkb-core/src/query/: mod.rs
crates/everythingkb-core/src/visualize/: mod.rs
crates/everythingkb-core/src/wiki/: mod.rs
crates/everythingkb-core/tests/: convert_pdf.rs  integration.rs
