[workspace]
resolver = "2"
members = ["crates/everythingkb-core", "crates/everythingkb-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
gray_matter = "0.3"
infer = "0.19"
jwalk = "0.8"
kamadak-exif = "0.6"
notify = "8"
notify-debouncer-full = "0.6"
ollama-rs = "0.3"
pulldown-cmark = "0.13"
regex = "1"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["json", "blocking"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.9"
walkdir = "2"
pdfium-render = "0.9"
mdkit = { version = "0.7", default-features = false, features = ["calamine", "csv", "html"] }
undocx = "0.5"
