[package]
name = "everythingkb-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
gray_matter.workspace = true
infer.workspace = true
jwalk.workspace = true
kamadak-exif.workspace = true
mdkit.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
ollama-rs.workspace = true
pdfium-render.workspace = true
pulldown-cmark.workspace = true
regex.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
undocx.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile = "3"
